--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # splitting panes
 # START:panesplit
-bind | split-window -h
+bind \ split-window -h
 bind - split-window -v
 # END:panesplit
 
