--- a/.tmux.conf
+++ b/.tmux.conf
@@ -170,3 +170,6 @@ bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 # START:pipe-pane
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 # END:pipe-pane
+
+# Disable swapping the pane position
+unbind C-o
