Copy the selected text into tmux-buffer, the primary clipboard and the second clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -173,3 +173,8 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
 # Disable swapping the pane position
 unbind C-o
+
+# Copy the selected text into tmux-buffer, the primary clipboard and the second clipboard
+# START: copy-selection
+# bind vi-copy MouseUp1 copy-selection \; run "tmux show-buffer | xclip -i -sel primary -f | xclip -i -sel clipboard" \; display "Copied"
+# END: copy-selection
