Rebind C-r for loading modified configuration because it's rarely used

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ setw -g pane-base-index 1
 
 # Reload the file with Prefix r
 # START:reload
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
 # END:reload
 
 # splitting panes
