Bind x/r to maximizing and restoring panes respectively

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -174,6 +174,13 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 # Disable swapping the pane position
 unbind C-o
 
+# Maximizing and Restoring windows 
+# Start
+unbind x
+bind x new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+bind r last-window \; swap-pane -s tmp.1 \; kill-window -t tmp  
+# End
+
 # Copy the selected text into tmux-buffer, the primary clipboard and the second clipboard
 # START: copy-selection
 # bind vi-copy MouseUp1 copy-selection \; run "tmux show-buffer | xclip -i -sel primary -f | xclip -i -sel clipboard" \; display "Copied"
