Provide the option to use zshell by default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,13 @@
 set -g prefix C-a  
 # END:prefix
 
+# Setting the default shell
+# START:default-shell
+# set -g default-command /bin/zsh
+# set -g default-shell /bin/zsh
+# END:default-shell
+
+
 # Free the original Ctrl-b prefix keybinding
 # START:unbind
 unbind C-b 
