--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,9 +74,7 @@ bind -r L resize-pane -R 5
 # START:mouse
 setw -g mode-mouse on
 # END:mouse
-set -g mouse-select-pane on 
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Set the default terminal mode to 256color mode
 # START:termcolor
